--- a/views/question.jade
+++ b/views/question.jade
@@ -1,8 +1,5 @@
-h1= question
-#answer
+h1= q.question
+#answer(data-id=q.id)
 	h2 Answer:
-	if yesno
-		button.btn.btn-success#yes Yes
-		button.btn.btn-danger#no Hell no!
-	else
-		input(type='text')
+	button.btn.btn-success#yes Yes
+	button.btn.btn-danger#no Hell no!
